--- a/ComfyUI/.gitignore
+++ b/ComfyUI/.gitignore
@@ -3,9 +3,9 @@ __pycache__/
 /output/
 /input/
 !/input/example.png
-
+/models/
 /temp/
-
+/custom_nodes/
 !custom_nodes/example_node.py.example
 extra_model_paths.yaml
 /.vs
@@ -21,4 +21,4 @@ venv/
 *.log
 web_custom_versions/
 .DS_Store
-*.safetensors
+.safetensors
