--- a/cog.yaml
+++ b/cog.yaml
@@ -148,6 +148,10 @@ build:
     - onnxruntime
     - onnxruntime-gpu; sys_platform != 'darwin' and platform_machine == 'x86_64'
 
+    - clip_interrogator>=0.6.0
+    - lark
+    - peft
+
   run:
     - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/latest/download/pget_$(uname -s)_$(uname -m)" && chmod +x /usr/local/bin/pget
     - pip install onnxruntime-gpu --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
